--- a/NewCPP/NewCPP.vcxproj.filters
+++ b/NewCPP/NewCPP.vcxproj.filters
@@ -42,5 +42,8 @@
     <ClCompile Include="팩토리얼.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="함수_자판기_고급.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
