--- a/NewCPP/NewCPP.vcxproj.filters
+++ b/NewCPP/NewCPP.vcxproj.filters
@@ -72,5 +72,8 @@
     <ClCompile Include="구조체_성적표시.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="TextRPG.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
